# usbhubctl

./: .gitignore  LICENSE  README.md  pyhubctl.code-workspace  pyproject.toml  pytest.ini  requirements-tests.txt  usbhubctl.code-workspace
.github/workflows/: test.yml
assessments/assessment_lsusb/: README_ASSESSMENT_LSUSB.md  out_lsusb-tv.txt  out_lsusb-v.txt
docs/: conf.py  design_datastructures.md  design_terms.md  links.md  readme_pypi.md  run_sphinx_copy.sh  run_sphinx_upload.sh
experiments/: sample_pyusb_detect_octohub_and_rp2infra.py  sample_pyusb_usbhub.py  sample_pyusb_usbhub_container.py  sample_pyusb_usbhub_simple.py
pyhubctl/: __init__.py  backend_power_sysfs.py  backend_power_uhubctl.py  backend_query_lsusb.py  parser_lsusb.py  pyhubctl.py  sample_pyusb_usbhub_simple_bak.py
pyhubctl/known_hubs/: __init__.py  rsh_a10.py  rsh_a107.py  rsh_a16.py  rsh_st07c.py
scripts/: lint.sh  test.sh
src/usbhubctl/: __init__.py  backend_power_sysfs.py  backend_power_uhubctl.py  backend_query_lsusb.py  parser_lsusb.py  usbhubctl.py  util_logging.json  util_octohub4.py  util_subprocess.py
src/usbhubctl/known_hubs/: __init__.py  octohub4.py  rsh_a107.py  rsh_a16.py  rsh_st07c.py
tests/: test_live.py  test_live_octohub4.py  test_parser_lsusb.py  test_path.py
usb_hubs/: README.md  README_4port_GL850G.md  README_7port_FE2.1.md  README_ATEN_US234.md  README_RSHTECH_RSH-A10.md  README_RSHTECH_RSH-A107.md  README_RSHTECH_RSH-A16.md  README_RSHTECH_RSH-ST07C.md  README_hans.md
usbhubctl/: __init__.py  backend_power_sysfs.py  backend_power_uhubctl.py  backend_query_lsusb.py  parser_lsusb.py  sample_pyusb_usbhub.py  sample_pyusb_usbhub_container.py  sample_pyusb_usbhub_simple.py  usbhubctl.py  util_logging.py  util_octohub4.py  util_subprocess.py
usbhubctl/known_hubs/: __init__.py  octohub4.py  rsh_a10.py  rsh_a107.py  rsh_a16.py  rsh_st07c.py
usbhubctl_sysfs/: Makefile  README.md  usbhubctl_sysfs  usbhubctl_sysfs.c
